[package]
name = "mr_pukeko"
version = "0.1.0"
authors = ["yiays <yesiateyoursheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"
twilight-command-parser = "0.3"
