[package]
name = "mr_pukeko"
version = "0.1.0"
authors = ["yiays <yesiateyoursheep@gmail.com>", "duncy <fryerduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.3.2"
twilight-http = "0.3.4"
twilight-model = "0.3.2"
twilight-command-parser = "0.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"